--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -17,6 +17,11 @@
       padding-inline: 32px;
     }
 
+    @include between-size($small, 1150px) {
+      max-width: rem(448px);
+      padding: 16px 28px;
+    }
+
     @include max-size($small) {
       max-width: 100%;
       padding: 40px 72px;
@@ -60,5 +65,6 @@
     font-weight: bold;
     text-transform: uppercase;
     min-width: rem(80px);
+    color: $color-dust-red-40;
   }
 }
