fashion grid new style

--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -6,30 +6,7 @@
   grid-template-rows: auto auto;
   gap: 32px;
 
-  @include max-size($medium) {
-    gap: 20px;
-    grid-template-columns: 1fr;
-  }
-
-  .grid-flex {
-    display: flex;
-    gap: 32px;
-
-    @include max-size($large) {
-      grid-column: span 2;
-      min-height: rem(380px);
-    }
-
-    @include max-size($medium) {
-      grid-column: span 1;
-      gap: 20px;
-    }
-
-    @include max-size($small) {
-      flex-direction: column;
-    }
-  }
-
+  // Common item styles
   .fashion-grid-item {
     display: flex;
     justify-content: flex-end;
@@ -38,22 +15,11 @@
     padding: 28px;
 
     @include max-size($medium) {
-      min-height: rem(412px);
       padding: 12px;
-    }
-
-    @include max-size($small) {
-      min-height: rem(363px);
     }
 
     &.grid-item-2 {
       justify-content: flex-start;
-    }
-
-    &.grid-item-4 {
-      @include max-size($small) {
-        flex-direction: column;
-      }
     }
 
     h2 {
@@ -86,90 +52,94 @@
     }
   }
 
+  // Item 1: spans two rows in col 1
   .grid-item-1 {
+    grid-column: 1;
     grid-row: span 2;
     background-color: $color-light-gray;
     background-image: url('/images/home/sale.png');
     background-size: contain;
     min-height: rem(760px);
 
-    @include max-size($large) {
-      min-height: rem(332px);
-      grid-row: span 1;
-      min-width: rem(748px);
-    }
-
-    @include max-size($medium) {
-      min-height: rem(668px);
-      min-width: 100%;
-    }
-
-    @include max-size($small) {
-      min-height: auto;
-    }
-
     .fashion-grid-text {
       justify-content: center;
       padding-bottom: 80px;
 
-      @include max-size($small) {
-        padding-bottom: 30px;
-        max-width: rem(164px);
-      }
+      // @include max-size($small) {
+      //   padding-bottom: 30px;
+      //   max-width: rem(164px);
+      // }
     }
 
     h2 {
       font-size: $font-xlarge;
       line-height: $font-xlarge;
 
-      @include max-size($small) {
-        font-size: $font-large;
-        line-height: $font-large;
-      }
+      // @include max-size($small) {
+      //   font-size: $font-large;
+      //   line-height: $font-large;
+      // }
     }
   }
 
+  // Item 2: top of col 2
   .grid-item-2 {
+    grid-column: 2;
+    grid-row: 1;
     background-image: url('/images/home/men.png');
     background-size: contain;
     background-position: right bottom;
     background-color: $color-gray-20;
   }
 
-  .grid-item-3 {
-    background-color: $color-dust-red-10;
-    background-image: url('/images/home/women.png');
-    background-size: 250px;
-    background-position-y: bottom;
+  // Nested grid for bottom items (3 + 4)
+  .grid-bottom {
+    grid-column: 2;
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
 
-    .fashion-grid-text {
-      max-width: rem(212px);
-      padding-top: 20px;
+    @include max-size($medium) {
+      grid-template-columns: 1fr; // stack for small screens
+      gap: 20px;
+    }
 
-      @include max-size($large) {
-        max-width: rem(412px);
-      }
+    .grid-item-3 {
+      background-color: $color-dust-red-10;
+      background-image: url('/images/home/women.png');
+      background-size: 250px;
+      background-position-y: bottom;
 
-      @include max-size($small) {
-        max-width: rem(296px);
-      }
+      .fashion-grid-text {
+        max-width: rem(212px);
+        padding-top: 20px;
 
-      @include max-size($mini) {
-        max-width: rem(164px);
+        // @include max-size($large) {
+        //   max-width: rem(412px);
+        // }
+
+        // @include max-size($small) {
+        //   max-width: rem(296px);
+        // }
+
+        // @include max-size($mini) {
+        //   max-width: rem(164px);
+        // }
       }
     }
-  }
 
-  .grid-item-4 {
-    background-image: url('/images/home/kids.jpg');
-    background-size: cover;
-    background-color: #e1e1e1;
+    .grid-item-4 {
+      background-image: url('/images/home/kids.jpg');
+      background-size: cover;
+      background-color: $color-gray-30;
 
-    .fashion-grid-text {
-      @include max-size($small) {
-        max-width: 100%;
-        padding: 30px;
-      }
+      // .fashion-grid-text {
+      //   @include max-size($small) {
+      //     max-width: 100%;
+      //     padding: 30px;
+      //   }
+      // }
     }
   }
 }
