text for fashion grid

--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -130,7 +130,7 @@
     }
 
     .grid-item-4 {
-      background-image: url('/images/home/kids.jpg');
+      background-image: url('/images/home/kids.png');
       background-size: cover;
       background-color: $color-gray-30;
 
