--- a/src/components/imageBackground/_image-background.scss
+++ b/src/components/imageBackground/_image-background.scss
@@ -1,12 +1,13 @@
 .image-background {
   display: grid;
-  width: 100%;
 
   .img-fallback {
     object-fit: cover;
     object-position: top;
     height: 100%;
     width: 100%;
+    max-width: max-content;
+    max-height: max-content;
   }
 }
 
