--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -66,7 +66,7 @@
       padding: 0 20px;
     }
 
-    @include between-size($small, rem(1550px)) {
+    @include between-size($medium, rem(1550px)) {
       .fashion-grid-text {
         background-color: rgb($color-white, 0.5);
         padding: 21px 28px;
