--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -58,7 +58,7 @@
     position: absolute;
     bottom: 4px;
     right: 4px;
-    background-color: rgba($color-gray-30, 70%);
+    background-color: rgb($color-gray-30, 70%);
     color: $color-white;
     padding: 8px;
   }
