--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -43,7 +43,7 @@ $color-primary: $color-gray-80;
 $color-secondary: $color-light-gray-30;
 $color-background: $color-light-gray-20;
 $color-background-secondary: $color-blue-30;
-$color-overlay: rgb($color-black, 0.5);
+$color-overlay: rgb($color-black, 50%);
 
 // Message popup colors
 $color-danger: $color-red-20;
