--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -67,7 +67,7 @@
 
     @include between-size($medium, rem(1550px)) {
       .fashion-grid-text {
-        background-color: rgb($color-white, 0.5);
+        background-color: rgb($color-white, 50%);
         padding: 21px 28px;
         border-radius: 4px;
         max-width: rem(400px);
