--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -16,7 +16,7 @@
   align-items: flex-end;
   margin: 12px 0;
 
-  @include max-size($small) {
+  @include max-size($mini) {
     flex-direction: column;
     align-items: flex-start;
     gap: 4px;
