--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -51,6 +51,8 @@
 
 // Admin nav
 .admin-nav-container {
+  flex-grow: 1;
+
   .nav-link {
     &.active {
       background-color: $color-background;
