clean up and move auth form

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -94,3 +94,13 @@
     border-radius: 4px;
   }
 }
+
+.auth-btn {
+  display: flex;
+  justify-content: flex-end;
+
+  .btn {
+    padding: 0;
+    margin-block: 12px 4px;
+  }
+}
