--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -27,6 +27,8 @@
 }
 
 .size-list {
+  border-inline-start: 1px solid $color-border;
+
   .product-list-item {
     @extend %stacked-item-border;
   }
