--- a/src/layout/accountLayout.styles.scss
+++ b/src/layout/accountLayout.styles.scss
@@ -3,7 +3,6 @@
 .account {
   height: 90vh;
   overflow: hidden;
-  width: 100%;
   display: flex;
   gap: 52px;
   justify-content: center;
@@ -16,9 +15,9 @@
   }
 
   .content-test {
-    background-color: #f9f9f9;
+    background-color: $color-background;
     padding: 42px;
-    min-height: 400px;
+    min-height: rem(400px);
   }
 
   .test {
@@ -26,15 +25,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 700px;
+    max-width: rem(700px);
     gap: 4px;
   }
 
   img {
-    object-fit: cover;
-    object-position: top;
-    width: 100%;
-    height: 100vh;
+    height: 100%;
     border-radius: 0;
   }
 }
