.main-header-container => .main-header-content

--- a/src/adminLayout/AdminLayout.styles.scss
+++ b/src/adminLayout/AdminLayout.styles.scss
@@ -23,7 +23,7 @@
       min-height: auto;
     }
 
-    .main-header-container {
+    .main-header-content {
       border: 0;
       padding-block: 0;
     }
