--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -95,6 +95,7 @@
   &.favorite-list {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 
     .product-card-img {
       height: rem(640px);
