--- a/src/adminLayout/AdminLayout.styles.scss
+++ b/src/adminLayout/AdminLayout.styles.scss
@@ -11,6 +11,15 @@
     display: flex;
   }
 
+  .page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: $page-width-large;
+    padding-block: 32px;
+  }
+
   .main {
     display: flex;
     height: calc(100svh - $header-height);
