--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -5,7 +5,7 @@
   margin-block: 24px 12px;
 }
 
-.page-header {
+.admin-page-header {
   display: flex;
   justify-content: space-between;
   width: 100%;
