--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -1,9 +1,9 @@
 @use '../../scss/globals' as *;
 
-.main-page-header {
-  width: 100%;
-  margin-block: 24px 12px;
-}
+// .main-page-header {
+//   width: 100%;
+//   margin-block: 24px 12px;
+// }
 
 .admin-page-header {
   display: flex;
