--- a/src/adminLayout/AdminLayout.styles.scss
+++ b/src/adminLayout/AdminLayout.styles.scss
@@ -2,6 +2,8 @@
 
 .admin {
   background-color: $color-background;
+  display: flex;
+  width: 100%;
   justify-content: center;
 }
 
@@ -14,12 +16,6 @@
 }
 
 .admin-container {
-  .container {
-    max-width: 100%;
-    display: flex;
-    padding-top: 32px;
-  }
-
   .main {
     display: flex;
     height: calc(100svh - $header-height);
