--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -107,3 +107,19 @@
     @extend %stacked-item-border;
   }
 }
+
+.page-card {
+  max-height: 78lvh;
+  overflow: auto;
+  overflow-x: clip;
+  background-color: $color-white;
+  border-radius: 4px;
+  box-shadow: $box-shadow;
+  width: 100%;
+  padding: 24px;
+
+  @include max-size($medium) {
+    max-height: 100%;
+    padding: 12px;
+  }
+}
