--- a/src/adminLayout/AdminLayout.styles.scss
+++ b/src/adminLayout/AdminLayout.styles.scss
@@ -23,7 +23,7 @@
   }
 
   .main-header {
-    .btn {
+    .btn-primary {
       max-width: rem(100px);
       padding-block: 12px;
       min-height: auto;
