--- a/src/adminLayout/AdminLayout.styles.scss
+++ b/src/adminLayout/AdminLayout.styles.scss
@@ -5,7 +5,8 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  padding-inline: 20px;
+  padding: 20px;
+  padding-top: 32px;
 }
 
 .admin-page {
