--- a/src/components/pageHeader/_page-header.scss
+++ b/src/components/pageHeader/_page-header.scss
@@ -1,7 +1,7 @@
 @use '../../scss/globals' as *;
 
 .page-header-container {
-  margin-bottom: 12px;
+  margin-block: 20px 12px;
   width: 100%;
 }
 
