--- a/src/pages/CollectionPage.styles.scss
+++ b/src/pages/CollectionPage.styles.scss
@@ -4,7 +4,7 @@
   .breadcrumbs-container {
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 4px;
+    margin-top: 20px;
   }
 }
 
