--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -130,3 +130,13 @@
     padding: 12px;
   }
 }
+
+.label-value-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  .text {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
