--- a/src/pages/account/_my-account.scss
+++ b/src/pages/account/_my-account.scss
@@ -1,7 +1,6 @@
 .my-account {
-  padding-block: 32px 12px;
+  padding: 32px;
   display: flex;
-  gap: 12px;
   flex-direction: column;
 
   .label-value-grid {
