--- a/src/layout/accountLayout.styles.scss
+++ b/src/layout/accountLayout.styles.scss
@@ -10,11 +10,10 @@
     padding-block: 12px;
   }
 
-  .nav {
-    display: flex;
-    justify-content: flex-end;
-    gap: 20px;
-    text-transform: uppercase;
+  .account-nav {
+    .nav-list {
+      display: flex;
+    }
   }
 
   .account-page-container {
