--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -84,6 +84,10 @@ a {
   color: $color-dust-red-30;
   position: relative;
 
+  &:hover {
+    color: $color-link-hover;
+  }
+
   &:focus-visible {
     outline: 2px solid currentcolor;
   }
