--- a/src/layout/accountLayout.styles.scss
+++ b/src/layout/accountLayout.styles.scss
@@ -13,16 +13,21 @@
   .account-nav {
     .nav-list {
       display: flex;
+      gap: 12px;
+
+      .nav-link {
+        text-transform: uppercase;
+        font-size: $font-small;
+      }
     }
   }
 
-  .account-page-container {
+  .account-content-container {
     display: flex;
     flex: 1;
     flex-direction: column;
     justify-content: center;
     gap: 4px;
-    max-width: rem(720px);
   }
 
   .account-page-content {
