--- a/src/pages/account/_my-account.scss
+++ b/src/pages/account/_my-account.scss
@@ -1,7 +1,8 @@
 .my-account {
-  padding: 32px;
+  padding-inline: 32px;
   display: flex;
   flex-direction: column;
+  gap: 32px;
 
   .label-value-grid {
     .text {
