--- a/src/layout/accountLayout.styles.scss
+++ b/src/layout/accountLayout.styles.scss
@@ -18,6 +18,10 @@
       .nav-link {
         text-transform: uppercase;
         font-size: $font-small;
+
+        &:hover {
+          color: $color-link-hover;
+        }
       }
     }
   }
