--- a/src/scss/_popup.scss
+++ b/src/scss/_popup.scss
@@ -12,6 +12,8 @@ $placements: (
   background-color: $color-light-gray-10;
   border-radius: 4px;
   z-index: 20;
+  max-width: rem(280px);
+  padding: 8px;
 
   @each $placement, $side in $placements {
     &[data-popper-placement^='#{$placement}'] > .popup-arrow {
