--- a/src/scss/globals/_mixins.scss
+++ b/src/scss/globals/_mixins.scss
@@ -57,5 +57,6 @@ $animation-timing-function: ease-in-out;
     $size: rem($size);
   }
 
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, $size), 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, $size), 1fr));
 }
