--- a/src/pages/account/_my-account.scss
+++ b/src/pages/account/_my-account.scss
@@ -23,7 +23,7 @@
 }
 
 .my-address-list {
-  @include grid-template-column(250px);
+  @include grid-template-column(230px);
 
   gap: 12px;
   grid-auto-rows: rem(248px) auto;
@@ -38,6 +38,7 @@
 .my-address-content {
   place-content: center;
   display: grid;
+  grid-row: span 3;
   gap: 4px;
 
   p {
@@ -48,7 +49,7 @@
 .my-address-title {
   font-family: $font-primary-bold;
   font-size: rem(16px);
-  margin: 0;
+  margin-top: 20px;
 }
 
 .my-address-footer {
@@ -56,5 +57,6 @@
   align-items: flex-end;
   gap: 20px;
   padding: 20px;
+  padding-top: 0;
   justify-content: flex-end;
 }
