--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -106,6 +106,7 @@ a[class^='btn-'],
   padding: 0;
   font-size: $font-small;
   border-radius: 0;
+  gap: 4px;
 
   &:hover {
     color: $color-link-hover;
