--- a/src/scss/_error.scss
+++ b/src/scss/_error.scss
@@ -1,18 +1,17 @@
 @use './globals' as *;
 
 .error-content {
-  display: flex;
+  display: grid;
   gap: 24px;
-  align-items: center;
+  place-content: center;
   color: currentcolor;
-  flex-direction: column;
+  justify-items: center;
   height: 100%;
-  justify-content: center;
   padding-block: 20px;
   width: 100%;
 
   .emoji {
-    max-width: rem(120px);
+    max-width: rem(152px);
   }
 
   .btn {
