--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -1,55 +1,13 @@
-﻿@use '../../scss/globals' as *;
-
-.pagination {
+.pagination-btn-list {
   display: flex;
-  justify-content: center;
-  padding: 0;
+  gap: 18px;
+  align-items: center;
 
-  .pagination-item {
-    display: flex;
-    align-items: center;
-
-    .btn {
-      padding: 8px 15px;
-      border: 1px solid $color-gray-40;
-      border-right: 0;
-      color: inherit;
-      min-width: 48px;
-      border-radius: 0;
-
-      &.last-pagination-item {
-        border-right: 1px solid $color-gray-40;
-      }
-
-      &:disabled {
-        color: $color-gray-40;
-      }
-
-      &:hover {
-        background-color: $color-blue;
-        color: $color-white;
-      }
-
-      &:focus {
-        @include outline($color-green, 1px);
-      }
-
-      &.active {
-        background-color: $color-blue;
-        color: $color-white;
-        pointer-events: none;
-      }
-    }
-  }
-
-  .pagination-item-content {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-
-    svg {
-      width: rem(14px);
-      height: rem(14px);
-    }
+  .btn {
+    min-height: auto;
+    width: 40px;
+    height: 40px;
+    padding: 8px 12px;
+    border-radius: 0;
   }
 }
