--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -8,6 +8,10 @@ button:disabled {
   &.btn-ghost {
     background-color: transparent;
     color: $color-gray-60;
+
+    svg {
+      stroke: $color-gray-60;
+    }
   }
 }
 
