--- a/src/pages/CollectionPage.styles.scss
+++ b/src/pages/CollectionPage.styles.scss
@@ -21,7 +21,11 @@
 .product-toolbar {
   display: flex;
   justify-content: space-between;
-  margin-block: 8px 24px;
+  margin-block: 16px;
+
+  p {
+    margin: 0;
+  }
 }
 
 @include max-size($small) {
